syntax = "proto3";

option csharp_namespace = "ProductService";

package catalog;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (Product);

  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
}

message ListProductsRequest {
}

message ListProductsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
}